# segment

./: CMakeCache.txt  CMakeLists.txt  ECLAT.cbp  Makefile  README.md  UnicodetoUtf8.py  cmake_install.cmake  run.sh  segment  segment.cpp
src/: text_utils.cpp
